# querysense

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  compose.yaml  fallout.html  package.json  vite.config.js
.github/workflows/: check.yml  general.yaml  release.yaml
.sqlx/: query-45ebac3f6188a966f408803f94ca6051f2401e8f4bf397e1cca42ba6ff204dd0.json  query-bdf0e8ed20acc6f1a56cef37d49511257a82cbf0bd52d871dbe574cca168a166.json  query-d9680ef68d3fed5975de745d9d55e18c44fc70eeab30b2aa88c13d73b16fcd8c.json
assets/: index.css  index.js  main.js  styles.css
cliente/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
cliente/src/: App.vue  main.ts
cliente/src/assets/: base.css  main.css
cliente/src/components/: Sidebar.vue  Tabla.vue
cliente/src/router/: index.ts
cliente/src/types/: HistorialRow.ts  TableRow.ts
crates/querysense/: Cargo.toml
crates/querysense-cli/: Cargo.toml
crates/querysense-cli/src/: lib.rs
crates/querysense-common/: Cargo.toml
crates/querysense-common/src/: lib.rs
crates/querysense-configuration/: Cargo.toml
crates/querysense-configuration/src/: lib.rs
crates/querysense-openai/: Cargo.toml
crates/querysense-openai/src/: lib.rs
crates/querysense-sqlite/: Cargo.toml
crates/querysense-sqlite/src/: lib.rs
crates/querysense-ui/: Cargo.toml
crates/querysense-ui/src/: lib.rs
crates/querysense-ui/templates/: base.html  fallback.html  table.html
crates/querysense-ui/templates/componentes/: form.html
crates/querysense/src/: embeddings.rs  lib.rs  main.rs  startup.rs
crates/querysense/src/routes/: assets.rs  fallback.rs  index.rs  mod.rs  search.rs
migrations/: 20240905151831_setup.sql  20240914215810_index.sql
src/: cli.rs  configuration.rs  embeddings.rs  lib.rs  main.rs  openai.rs  sqlite.rs  startup.rs  templates.rs  utils.rs  vector.rs
src/routes/: assets.rs  fallback.rs  historial.rs  index.rs  mod.rs  query.rs  search.rs
templates/: base.html  componentes.html  index.html  table.html  table_rrf.html
templates/componentes/: form.html  historial.html
