[package]
name = "querysense"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs" 

[profile.release-with-debug]
inherits = "release"
debug = true


[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full", "rt"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tower-request-id = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = { version = "0.4.38", features = ["serde"] }
http = "1.1.0"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
csv = "1.3.0"
sqlite-vec = "0.1.3"
rusqlite = { version = "0.32.0", features = ["bundled"] }
zerocopy = "0.8.5"
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["json", "stream"] }
rayon ={version = "1.10.0"}
ammonia = "4.0.0"

candle-nn ={version = "0.7.2", optional = true }
candle-core ={version = "0.7.2", optional = true }
hf-hub ={version = "0.3.2", optional = true }
tokenizers ={version = "0.20.1", optional = true }
candle-transformers ={version = "0.7.2", optional = true }
tokio-util = { version = "0.7.12", features = ["io"] }
bytes = "1.8.0"
futures = "0.3.31"

[features] 
local = ["dep:candle-nn", "dep:candle-core",  "dep:hf-hub" ,"dep:tokenizers", "dep:candle-transformers"]
