[package]
name = "querysense"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs" 

[profile.profiling]
inherits = "release"
debug = true

[profile.release]
incremental = true
lto = "thin"

[dependencies]
candle-nn ={version = "0.7.2", optional = true }
candle-core ={version = "0.7.2", optional = true }
hf-hub ={version = "0.3.2", optional = true }
tokenizers ={version = "0.20.1", optional = true }
candle-transformers ={version = "0.7.2", optional = true }

axum = { version = "0.7.5", features = ["macros"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full", "rt"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["compression-gzip", "cors", "fs", "trace"] }
tower-request-id = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
http = "1.1.0"
askama_axum = "0.4.0"
csv = "1.3.0"
sqlite-vec = "0.1.3"
rusqlite = { version = "0.32.0", features = ["bundled"] }
zerocopy = "0.8.5"
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.8", default-features = false, features = ["json", "stream", "rustls-tls"] }
ammonia = "4.0.0"
tokio-util = { version = "0.7.12", features = ["io"] }
bytes = "1.8.0"
futures = "0.3.31"
tracing-tree = "0.4.0"
hyper = { version = "1.5.0", features = ["client"] }
tracing-error = "0.2.0"
color-eyre = "0.6.3"
eyre = "0.6.12"
rustls = "0.23.16"
askama = { version = "0.12.1", features = ["with-axum"] }
thiserror = "2.0.3"


[features] 
local = ["dep:candle-nn", "dep:candle-core",  "dep:hf-hub" ,"dep:tokenizers", "dep:candle-transformers"]
