[package]
name = "querysense-common"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre.workspace = true
color-eyre.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tracing.workspace = true
rinja.workspace = true
rinja_axum.workspace = true
serde_urlencoded.workspace = true
termcolor = "1.4.1"
chrono = "0.4.39"

